# fantasy-football-manager

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  code-quality-check.yml  nodejs-app.yml  python-app.yml
agent_system/: .env.example  Dockerfile  README.md  agent_runner.py  check_tasks.py  code_quality_autofix.py  code_quality_workflow.py  config.py  continuous_monitoring.py  create_test_changes.py  dashboard.py  docker-compose.yml  ensure_task_completion.py  fix_console_logger.py  launch_agents.py  qa_workflow.py  requirements.txt  reset_tasks.py  run.py  run_parallel_agents.py  task_monitor.py  test_first_tasks.py  test_generator.py  test_github_pr.py  update_task.py  validate_code_quality.py
agent_system/agents/: definitions.py  models.py  pr_workflow.py  tasks.py
agent_system/docs/: code_quality_automation.md
agent_system/static/: style.css
agent_system/storage/: tasks.json
agent_system/tasks/: roadmap_parser.py
agent_system/templates/: agents.html  base.html  index.html  logs.html  task_detail.html  tasks.html
agent_system/utils/: github_integration.py  persistence.py
app/: __init__.py  config.py  main.py
app/db/: base.py
app/models/: league.py  player.py
backend/: Dockerfile
backend/analysis/: faab_suggestions.py
backend/app/: __init__.py  main.py
docs/: ACCEPTANCE.md  ARCHITECTURE.md  ROADMAP.md  agent_pr_test.md
frontend/: Dockerfile  package.json
scripts/: Dockerfile  docker-compose.yml  init-db.py  install_systemd_service.sh  run_server.py  start.sh
tests/: test_api.py
(+31 files in other folders)
