[tool.poetry]
name = "fantasy-football-manager"
version = "0.1.0"
description = "Ultimate Personal Fantasy Football Manager"
authors = ["Jeff <your-email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
polars = "^0.20.8"
duckdb = "^0.9.2"
httpx = "^0.26.0"
pydantic = "^2.5.3"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
xgboost = "^2.0.2"
lightgbm = "^4.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.12.0"
mypy = "^1.8.0"
isort = "^5.13.2"
flake8 = "^6.1.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--cov=backend --cov-report=term-missing" 